# Doom-Android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidDriver.c  AndroidDriver.h  AndroidRenderer.c  AndroidRenderer.h  CMakeLists.txt  Draw.c  Draw.h  Makefile  am_map.c  am_map.h  config.h  d_englsh.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_mode.c  d_mode.h  d_net.c  d_player.h  d_think.h  d_ticcmd.h  deh_misc.h  doomdata.h  doomdef.h  doomfeatures.h  doomgeneric.c  doomgeneric.h  doomgeneric_android.c  doomgeneric_win.c  doomgeneric_xlib.c  doomkeys.h  doomstat.c  doomstat.h  (+121 more)
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
